# overvakt

./: Cargo.toml  Dockerfile  PACKAGING.md  README.md  overvakt.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
examples/config/: systemd.service
res/assets/stylesheets/: common.css
res/assets/templates/: index.tera
scripts/: release_binaries.sh  sign_binaries.sh
src/: main.rs
src/aggregator/: manager.rs  mod.rs
src/config/: config.rs  defaults.rs  logger.rs  mod.rs  notify.rs  plugins.rs  probe.rs  reader.rs  regex.rs
src/notifier/: email.rs  generic.rs  gotify.rs  matrix.rs  mod.rs  pushover.rs  slack.rs  telegram.rs  twilio.rs  webex.rs  webhook.rs  xmpp.rs  zulip.rs
src/prober/: manager.rs  mod.rs  mode.rs  replica.rs  states.rs  status.rs
src/responder/: announcements.rs  context.rs  manager.rs  mod.rs  routes.rs
src/util/ping/: errors.rs  mod.rs
src/util/ping/packet/: icmp.rs  ipv4.rs
