[package]
name = "vigil-server"
version = "1.24.3"
description = "Microservices Status Page. Monitors a distributed infrastructure and sends alerts (Slack, SMS, etc.)."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/valeriansaliou/vigil"
repository = "https://github.com/valeriansaliou/vigil.git"
keywords = ["microservices", "infrastructure", "status", "monitor", "slack"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]
exclude = ["dev/*"]

[[bin]]
name = "vigil"
path = "src/main.rs"
doc = false

[dependencies]
log = { version = "0.4.17", features = ["std"] }
clap = { version = "4.0.18", features = ["std", "cargo"] }
lazy_static = "1.4.0"
time = { version = "0.3.15", features = ["formatting"] }
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
base64 = "0.13.1"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"], default-features = false }
regex = "1.6.0"
url = { version = "2.3.1", default-features = false }
url_serde = { version = "0.2.0", default-features = false }
http = "0.2.8"
http-serde = "1.1.2"
indexmap = { version = "1.9.1", features = ["serde-1"] }
tera = { version = "1.17.1", default-features = false }
reqwest = { version = "0.11.12", features = ["rustls-tls", "gzip", "blocking", "json"], default-features = false }
ping = "0.4.0"
run_script = "0.10.0"
lettre = { version = "0.10.1", features = ["smtp-transport", "rustls-tls", "builder"], default-features = false, optional = true }
libstrophe = { version = "0.17.0", optional = true }
thiserror = "1.0.37"
poem = { version = "1.3.47", features = ["static-files"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "net", "io-util"] }
anyhow = "1.0.66"

[features]
default = ["notifier-email", "notifier-twilio", "notifier-slack", "notifier-zulip", "notifier-telegram", "notifier-pushover", "notifier-gotify", "notifier-matrix", "notifier-webex", "notifier-webhook"]
notifier-email = ["lettre"]
notifier-twilio = []
notifier-slack = []
notifier-zulip = []
notifier-telegram = []
notifier-pushover = []
notifier-gotify = []
notifier-matrix = []
notifier-webex = []
notifier-webhook = []
notifier-xmpp = ["libstrophe"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"
strip = true
