[package]
name = "overvakt-server"
version = "0.2.1"
description = "Service uptime monitor with alert plugins"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
repository = "https://github.com/bbqsrc/overvakt"
keywords = ["microservices", "infrastructure", "status", "monitor", "slack"]
categories = ["web-programming"]
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]

[[bin]]
name = "overvakt"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.0.18", features = ["std", "cargo"] }
time = { version = "0.3.16", features = ["formatting"] }
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
base64 = "0.13.1"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"], default-features = false }
regex = "1.6.0"
url = { version = "2.3.1", features = ["serde"] }
http = "0.2.8"
http-serde = "1.1.2"
indexmap = { version = "1.9.1", features = ["serde-1"] }
tera = { version = "1.17.1", default-features = false }
reqwest = { version = "0.11.12", features = ["rustls-tls", "gzip", "blocking", "json"], default-features = false }
run_script = "0.10.0"
lettre = { version = "0.10.1", features = ["smtp-transport", "rustls-tls", "builder"], default-features = false, optional = true }
libstrophe = { version = "0.17.0", optional = true }
thiserror = "1.0.37"
poem = { version = "1.3.48", features = ["static-files"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
anyhow = "1.0.66"
parking_lot = "0.12.1"
once_cell = { version = "1.16.0", features = ["parking_lot"] }
rand = "0.8.5"
socket2 = "0.4.7"
config = "0.13.2"
serde_regex = "1.1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "serde", "parking_lot"] }

[features]
default = ["notifier-email", "notifier-twilio", "notifier-slack", "notifier-zulip", "notifier-telegram", "notifier-pushover", "notifier-gotify", "notifier-matrix", "notifier-webex", "notifier-webhook"]
notifier-email = ["lettre"]
notifier-twilio = []
notifier-slack = []
notifier-zulip = []
notifier-telegram = []
notifier-pushover = []
notifier-gotify = []
notifier-matrix = []
notifier-webex = []
notifier-webhook = []
notifier-xmpp = ["libstrophe"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
lto = "fat"
debug = false
debug-assertions = false
panic = "abort"
strip = true
